[gd_scene load_steps=6 format=3 uid="uid://daxo455h6nlm4"]

[ext_resource type="Theme" uid="uid://d4lygjei3ld2f" path="res://themes/gothic_scenario.tres" id="1_fxjf4"]
[ext_resource type="PackedScene" uid="uid://bdtq7xo1dfigb" path="res://scenarios/aa_instanced_scenes/FadePanel.tscn" id="3_iy7gy"]
[ext_resource type="Script" path="res://scenarios/leipzig/latin_quarter/LatinQuarter.gd" id="3_wo5on"]
[ext_resource type="PackedScene" uid="uid://d3bii8k8584d" path="res://scenarios/aa_instanced_scenes/TextBox.tscn" id="4_p4egs"]
[ext_resource type="PackedScene" uid="uid://dna4je6f4puhp" path="res://scenarios/aa_instanced_scenes/Audio.tscn" id="6_vudu8"]

[node name="LatinQuarter" type="TextureRect"]
offset_left = 40.0
offset_top = 40.0
offset_right = 1560.0
offset_bottom = 1040.0
theme = ExtResource("1_fxjf4")
script = ExtResource("3_wo5on")

[node name="FadePanel" parent="." instance=ExtResource("3_iy7gy")]
visible = false
layout_mode = 0

[node name="TextBox" parent="." instance=ExtResource("4_p4egs")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 1210.0
offset_bottom = 417.0

[node name="Time" type="Label" parent="TextBox"]
layout_mode = 2

[node name="Intro" type="Label" parent="TextBox"]
custom_minimum_size = Vector2(1200, 10)
layout_mode = 2
text = "You are in Leipzig's Latin Quarter amongst the churches, cathedral and university. Making your best attempts to appear pious and scholarly, you stride over to..."
autowrap_mode = 2

[node name="Options" type="VBoxContainer" parent="TextBox"]
layout_mode = 2

[node name="University" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...the university."
flat = true
alignment = 0

[node name="Church" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...a humble church."
flat = true
alignment = 0

[node name="Cathedral" type="Button" parent="TextBox/Options"]
layout_mode = 2
disabled = true
text = "...the majestic cathedral."
flat = true
alignment = 0

[node name="Monastery" type="Button" parent="TextBox/Options"]
layout_mode = 2
disabled = true
text = "...the monastery."
flat = true
alignment = 0

[node name="Garden" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...a garden by the monastery where you can sit, relax and pass some time."
flat = true
alignment = 0

[node name="Square" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...a side street leading to the town square and rathaus."
flat = true
alignment = 0

[node name="MainSt" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...the corridor leading back to the main street."
flat = true
alignment = 0

[node name="Outcome" type="Label" parent="TextBox"]
visible = false
layout_mode = 2

[node name="Audio" parent="." instance=ExtResource("6_vudu8")]
stream = null

[connection signal="pressed" from="TextBox/Options/University" to="." method="_on_university_pressed"]
[connection signal="pressed" from="TextBox/Options/Church" to="." method="_on_church_pressed"]
[connection signal="pressed" from="TextBox/Options/Cathedral" to="." method="_on_cathedral_pressed"]
[connection signal="pressed" from="TextBox/Options/Monastery" to="." method="_on_monastery_pressed"]
[connection signal="pressed" from="TextBox/Options/Garden" to="." method="_on_garden_pressed"]
[connection signal="pressed" from="TextBox/Options/Square" to="." method="_on_square_pressed"]
[connection signal="pressed" from="TextBox/Options/MainSt" to="." method="_on_main_st_pressed"]
